tests/ok/package-cache-const-header-main.ari
mod cache_consts;

fn main() -> i64 {
  if cache_consts::READY {
    cache_consts::PICK + (cache_consts::SMALL as i64)
  } else {
    0
  }
}
