tests/errors/meta-function-body-planned.ari
meta fn bad(input: token_stream) -> token_stream {
  return input;
}

fn main() -> i64 {
  return 0;
}
